tests/agl/rejections/parse/chained_equality.agl
let ok = (1 == 2 == 3)
print ok
